cabal-version:      2.4
name:               dot-analysis
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/gallais/dot-analysis/issues

-- The license under which the package is released.
-- license:
author:             Guillaume Allais
maintainer:         guillaume.allais@ens-lyon.org

-- A copyright notice.
-- copyright:
-- category:

executable dot-analysis
    main-is:          Main.hs

    default-extensions: DeriveFoldable
                      , DeriveTraversable
                      , LambdaCase
                      , ScopedTypeVariables

    -- Modules included in this executable, other than Main.
    other-modules: Data.DependencyGraph

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13
                    , containers >=0.6 && <0.7
                    , filepath >=1.4 && <1.5
                    , graphviz >=2999.20 && <2999.21
                    , text >=2.0 && <2.1
    hs-source-dirs:   src
    default-language: Haskell2010
